# ast26

./: .gitignore  CLI_FLAGS_REPORT.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
DDSUnsupportedFormat/: americanElm_stage01LOD_seasonalCurve.dds  americanElm_stage02LOD_seasonalCurve.dds  americanElm_stage03LOD_seasonalCurve.dds  americanElm_stage04LOD_seasonalCurve.dds  americanElm_stage05LOD_seasonalCurve.dds  apple_stage03LOD_seasonalCurve.dds  aspen_stage01LOD_seasonalCurve.dds  aspen_stage02LOD_seasonalCurve.dds  aspen_stage03LOD_seasonalCurve.dds  aspen_stage04LOD_seasonalCurve.dds  aspen_stage05LOD_seasonalCurve.dds  aspen_stage06_var01_LOD_seasonalCurve.dds  aspen_stage06_var02_LOD_seasonalCurve.dds  beech_stage01LOD_seasonalCurve.dds  beech_stage02LOD_seasonalCurve.dds  beech_stage02_var03LOD_seasonalCurve.dds  beech_stage04LOD_seasonalCurve.dds  beech_stage06_var01LOD_seasonalCurve.dds  beech_stage06_var02LOD_seasonalCurve.dds  betulaErmanii_stage01LOD_seasonalCurve.dds  betulaErmanii_stage02LOD_seasonalCurve.dds  betulaErmanii_stage03LOD_seasonalCurve.dds  betulaErmanii_stage04LOD_seasonalCurve.dds  boxelder_stage01LOD_seasonalCurve.dds  boxelder_stage02LOD_seasonalCurve.dds  boxelder_stage03LOD_seasonalCurve.dds  cherry_stage01LOD1_seasonalCurve.dds  cherry_stage02LOD1_seasonalCurve.dds  cherry_stage03LOD1_seasonalCurve.dds  cherry_stage04LOD1_seasonalCurve.dds  chineseElm_stage01LOD_seasonalCurve.dds  chineseElm_stage04LOD_seasonalCurve.dds  downyServiceBerry02LOD_seasonalCurve.dds  goldenRain_stage01LOD_seasonalCurve.dds  goldenRain_stage02LOD_seasonalCurve.dds  goldenRain_stage03LOD_seasonalCurve.dds  goldenRain_stage04LOD_seasonalCurve.dds  japaneseZelkova_stage01LOD_seasonalCurve.dds  japaneseZelkova_stage02LOD_seasonalCurve.dds  japaneseZelkova_stage03LOD_seasonalCurve.dds  (+17 more)
ast26/: __init__.py  astc.py  cli.py  codec.py  container.py
cli/: main.cpp
gimp-plugin/: README.md  file-ast26-gimp3.cpp  file-ast26.cpp
include/ast26/: ast26.hpp
samples/: 0_0_0_C1.ast  0_0_0_C2.ast  10_0_0_C1.ast  10_0_0_C2.ast  12_0_0_C1.ast  12_0_0_C2.ast  14_0_0_C1.ast  14_0_0_C2.ast  16_0_0_C1.ast  16_0_0_C2.ast  17_0_0_C1.ast  17_0_0_C2.ast  18_0_0_C1.ast  18_0_0_C2.ast  18_30_0_C1.ast  18_30_0_C2.ast  19_0_0_C1.ast  19_0_0_C2.ast  19_12_0_C1.ast  19_12_0_C2.ast  19_17_59_C1.ast  19_17_59_C2.ast  19_23_59_C1.ast  19_23_59_C2.ast  19_30_0_C1.ast  19_30_0_C2.ast  19_36_0_C1.ast  19_36_0_C2.ast  19_42_0_C1.ast  19_42_0_C2.ast  19_47_59_C1.ast  19_47_59_C2.ast  19_53_59_C1.ast  19_53_59_C2.ast  19_6_0_C1.ast  19_6_0_C2.ast  20_0_0_C1.ast  20_0_0_C2.ast  20_30_0_C1.ast  20_30_0_C2.ast  (+5527 more)
src/: api.cpp  astc_bridge.cpp  astc_bridge.hpp  codec.cpp  codec.hpp  color_format.cpp  color_format.hpp  container.cpp  container.hpp  dds_io.cpp  dds_io.hpp  flip.cpp  flip.hpp  image_io.cpp  image_io.hpp  mipgen.cpp  mipgen.hpp
