[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ast26"
version = "1.0.0"
description = "CLI and library for Farming Simulator 2026 AST (GS2D v8) texture files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
]

[project.scripts]
ast26 = "ast26.cli:main"

[tool.setuptools.packages.find]
include = ["ast26*"]
